interface/Messages/MessageCompiler.c
/* A recursive-descent parser generated by peg 0.1.2 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include <assert.h>
#define YYRULECOUNT 37


#include <stdio.h>

#define YY_PARSE(T) static T
//#define YY_DEBUG

enum BlockType
{
	BT_MESSAGE,
	BT_ENUM,
	BT_SERVICE
};


#ifndef YY_VARIABLE
#define YY_VARIABLE(T)	static T
#endif
#ifndef YY_LOCAL
#define YY_LOCAL(T)	static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)	static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)	static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)	T
#endif
#ifndef YYPARSE
#define YYPARSE		yyparse
#endif
#ifndef YYPARSEFROM
#define YYPARSEFROM	yyparsefrom
#endif
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)			\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#ifndef YY_BEGIN
#define YY_BEGIN	( yybegin= yypos, 1)
#endif
#ifndef YY_END
#define YY_END		( yyend= yypos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args)	fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE	int
#endif
#ifndef YY_STACKSIZE
#define YY_STACKSIZE	1024
#endif

#ifndef YY_PART

typedef void (*yyaction)(char *yytext, int yyleng);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

YY_VARIABLE(char *   ) yybuf= 0;
YY_VARIABLE(int	     ) yybuflen= 0;
YY_VARIABLE(int	     ) yypos= 0;
YY_VARIABLE(int	     ) yylimit= 0;
YY_VARIABLE(char *   ) yytext= 0;
YY_VARIABLE(int	     ) yytextlen= 0;
YY_VARIABLE(int	     ) yybegin= 0;
YY_VARIABLE(int	     ) yyend= 0;
YY_VARIABLE(int	     ) yytextmax= 0;
YY_VARIABLE(yythunk *) yythunks= 0;
YY_VARIABLE(int	     ) yythunkslen= 0;
YY_VARIABLE(int      ) yythunkpos= 0;
YY_VARIABLE(YYSTYPE  ) yy;
YY_VARIABLE(YYSTYPE *) yyval= 0;
YY_VARIABLE(YYSTYPE *) yyvals= 0;
YY_VARIABLE(int      ) yyvalslen= 0;

YY_LOCAL(int) yyrefill(void)
{
  int yyn;
  while (yybuflen - yypos < 512)
    {
      yybuflen *= 2;
      yybuf= realloc(yybuf, yybuflen);
    }
  YY_INPUT((yybuf + yypos), yyn, (yybuflen - yypos));
  if (!yyn) return 0;
  yylimit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(void)
{
  if (yypos >= yylimit && !yyrefill()) return 0;
  ++yypos;
  return 1;
}

YY_LOCAL(int) yymatchChar(int c)
{
  if (yypos >= yylimit && !yyrefill()) return 0;
  if (yybuf[yypos] == c)
    {
      ++yypos;
      yyprintf((stderr, "  ok   yymatchChar(%c) @ %s\n", c, yybuf+yypos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(%c) @ %s\n", c, yybuf+yypos));
  return 0;
}

YY_LOCAL(int) yymatchString(char *s)
{
  int yysav= yypos;
  while (*s)
    {
      if (yypos >= yylimit && !yyrefill()) return 0;
      if (yybuf[yypos] != *s)
        {
          yypos= yysav;
          return 0;
        }
      ++s;
      ++yypos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(unsigned char *bits)
{
  int c;
  if (yypos >= yylimit && !yyrefill()) return 0;
  c= yybuf[yypos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++yypos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", yybuf+yypos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", yybuf+yypos));
  return 0;
}

YY_LOCAL(void) yyDo(yyaction action, int begin, int end)
{
  while (yythunkpos >= yythunkslen)
    {
      yythunkslen *= 2;
      yythunks= realloc(yythunks, sizeof(yythunk) * yythunkslen);
    }
  yythunks[yythunkpos].begin=  begin;
  yythunks[yythunkpos].end=    end;
  yythunks[yythunkpos].action= action;
  ++yythunkpos;
}

YY_LOCAL(int) yyText(int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (yytextlen < (yyleng - 1))
	{
	  yytextlen *= 2;
	  yytext= realloc(yytext, yytextlen);
	}
      memcpy(yytext, yybuf + begin, yyleng);
    }
  yytext[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(void)
{
  int pos;
  for (pos= 0;  pos < yythunkpos;  ++pos)
    {
      yythunk *thunk= &yythunks[pos];
      int yyleng= thunk->end ? yyText(thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, yytext));
      thunk->action(yytext, yyleng);
    }
  yythunkpos= 0;
}

YY_LOCAL(void) yyCommit()
{
  if ((yylimit -= yypos))
    {
      memmove(yybuf, yybuf + yypos, yylimit);
    }
  yybegin -= yypos;
  yyend -= yypos;
  yypos= yythunkpos= 0;
}

YY_LOCAL(int) yyAccept(int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone();
      yyCommit();
    }
  return 1;
}

YY_LOCAL(void) yyPush(char *text, int count)	{ yyval += count; assert(yyval-yyvals <= yyvalslen); }
YY_LOCAL(void) yyPop(char *text, int count)	{ yyval -= count; }
YY_LOCAL(void) yySet(char *text, int count)	{ yyval[count]= yy; }

#endif /* YY_PART */

#define	YYACCEPT	yyAccept(yythunkpos0)

YY_RULE(int) yy_SPACE(); /* 37 */
YY_RULE(int) yy_EOL(); /* 36 */
YY_RULE(int) yy_ENUM(); /* 35 */
YY_RULE(int) yy_STRUCT(); /* 34 */
YY_RULE(int) yy___(); /* 33 */
YY_RULE(int) yy_PAREN_CLOSE(); /* 32 */
YY_RULE(int) yy_PAREN_OPEN(); /* 31 */
YY_RULE(int) yy_ASSIGN(); /* 30 */
YY_RULE(int) yy_KEYWORD(); /* 29 */
YY_RULE(int) yy_DIGIT(); /* 28 */
YY_RULE(int) yy_DOUBLE(); /* 27 */
YY_RULE(int) yy_FLOAT(); /* 26 */
YY_RULE(int) yy_UINT64(); /* 25 */
YY_RULE(int) yy_INT64(); /* 24 */
YY_RULE(int) yy_UINT32(); /* 23 */
YY_RULE(int) yy_INT32(); /* 22 */
YY_RULE(int) yy_UINT16(); /* 21 */
YY_RULE(int) yy_INT16(); /* 20 */
YY_RULE(int) yy_UINT8(); /* 19 */
YY_RULE(int) yy_INT8(); /* 18 */
YY_RULE(int) yy_STRING(); /* 17 */
YY_RULE(int) yy_BOOL(); /* 16 */
YY_RULE(int) yy_TYPE(); /* 15 */
YY_RULE(int) yy_COLON(); /* 14 */
YY_RULE(int) yy_NUMBER(); /* 13 */
YY_RULE(int) yy__(); /* 12 */
YY_RULE(int) yy_FIELD(); /* 11 */
YY_RULE(int) yy_BLOCK_CLOSE(); /* 10 */
YY_RULE(int) yy_BLOCK_FIELD(); /* 9 */
YY_RULE(int) yy_BLOCK_OPEN(); /* 8 */
YY_RULE(int) yy_INHERITANCE(); /* 7 */
YY_RULE(int) yy_IDENTIFIER(); /* 6 */
YY_RULE(int) yy_MESSAGE(); /* 5 */
YY_RULE(int) yy_BLOCK_MESSAGE(); /* 4 */
YY_RULE(int) yy_EMPTY(); /* 3 */
YY_RULE(int) yy_BLOCK(); /* 2 */
YY_RULE(int) yy_LINE(); /* 1 */

YY_ACTION(void) yy_1_MESSAGE(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_MESSAGE\n"));
   printf("got message\n"); ;
}
YY_ACTION(void) yy_1_INHERITANCE(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_INHERITANCE\n"));
   printf("got inheritance\n"); ;
}
YY_ACTION(void) yy_1_COLON(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_COLON\n"));
   printf("got colon\n"); ;
}
YY_ACTION(void) yy_1_NUMBER(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_NUMBER\n"));
   printf("got number\n"); ;
}
YY_ACTION(void) yy_1_IDENTIFIER(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_IDENTIFIER\n"));
   printf("got id\n"); ;
}
YY_ACTION(void) yy_1_FIELD(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_FIELD\n"));
   printf("got field\n"); ;
}
YY_ACTION(void) yy_1_BLOCK_FIELD(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_BLOCK_FIELD\n"));
   printf("got field block\n"); ;
}
YY_ACTION(void) yy_1_BLOCK_MESSAGE(char *yytext, int yyleng)
{
#define id yyval[-1]
  yyprintf((stderr, "do yy_1_BLOCK_MESSAGE\n"));
   printf("got message block\n"); ;
#undef id
}
YY_ACTION(void) yy_1_BLOCK(char *yytext, int yyleng)
{
#define b yyval[-1]
  yyprintf((stderr, "do yy_1_BLOCK\n"));
   printf("got message decl\n"); ;
#undef b
}
YY_ACTION(void) yy_1_LINE(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_LINE\n"));
   printf("got empty line\n"); ;
}

YY_RULE(int) yy_SPACE()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "SPACE"));  if (!yymatchClass((unsigned char *)"\000\002\000\000\001\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l1;
  yyprintf((stderr, "  ok   %s @ %s\n", "SPACE", yybuf+yypos));
  return 1;
  l1:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "SPACE", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_EOL()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "EOL"));
  {  int yypos3= yypos, yythunkpos3= yythunkpos;  if (!yymatchChar('\n')) goto l4;  goto l3;
  l4:;	  yypos= yypos3; yythunkpos= yythunkpos3;  if (!yymatchString("\r\n")) goto l5;  goto l3;
  l5:;	  yypos= yypos3; yythunkpos= yythunkpos3;  if (!yymatchChar('\r')) goto l2;
  }
  l3:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "EOL", yybuf+yypos));
  return 1;
  l2:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "EOL", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_ENUM()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "ENUM"));  if (!yymatchString("enum")) goto l6;  if (!yy___()) goto l6;
  yyprintf((stderr, "  ok   %s @ %s\n", "ENUM", yybuf+yypos));
  return 1;
  l6:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "ENUM", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_STRUCT()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "STRUCT"));  if (!yymatchString("struct")) goto l7;  if (!yy___()) goto l7;
  yyprintf((stderr, "  ok   %s @ %s\n", "STRUCT", yybuf+yypos));
  return 1;
  l7:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "STRUCT", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy___()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "__"));  if (!yy__()) goto l8;
  yyprintf((stderr, "  ok   %s @ %s\n", "__", yybuf+yypos));
  return 1;
  l8:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "__", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_PAREN_CLOSE()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "PAREN_CLOSE"));  if (!yy__()) goto l9;  if (!yymatchChar(')')) goto l9;
  yyprintf((stderr, "  ok   %s @ %s\n", "PAREN_CLOSE", yybuf+yypos));
  return 1;
  l9:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "PAREN_CLOSE", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_PAREN_OPEN()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "PAREN_OPEN"));  if (!yy__()) goto l10;  if (!yymatchChar('(')) goto l10;
  yyprintf((stderr, "  ok   %s @ %s\n", "PAREN_OPEN", yybuf+yypos));
  return 1;
  l10:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "PAREN_OPEN", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_ASSIGN()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "ASSIGN"));  if (!yy__()) goto l11;  if (!yymatchChar('=')) goto l11;
  yyprintf((stderr, "  ok   %s @ %s\n", "ASSIGN", yybuf+yypos));
  return 1;
  l11:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "ASSIGN", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_KEYWORD()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "KEYWORD"));  if (!yy_IDENTIFIER()) goto l12;
  yyprintf((stderr, "  ok   %s @ %s\n", "KEYWORD", yybuf+yypos));
  return 1;
  l12:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "KEYWORD", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_DIGIT()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "DIGIT"));  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\377\003\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l13;
  yyprintf((stderr, "  ok   %s @ %s\n", "DIGIT", yybuf+yypos));
  return 1;
  l13:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "DIGIT", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_DOUBLE()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "DOUBLE"));  if (!yymatchString("double")) goto l14;  if (!yy___()) goto l14;
  yyprintf((stderr, "  ok   %s @ %s\n", "DOUBLE", yybuf+yypos));
  return 1;
  l14:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "DOUBLE", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_FLOAT()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "FLOAT"));  if (!yymatchString("float")) goto l15;  if (!yy___()) goto l15;
  yyprintf((stderr, "  ok   %s @ %s\n", "FLOAT", yybuf+yypos));
  return 1;
  l15:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "FLOAT", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_UINT64()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "UINT64"));  if (!yymatchString("uint64")) goto l16;  if (!yy___()) goto l16;
  yyprintf((stderr, "  ok   %s @ %s\n", "UINT64", yybuf+yypos));
  return 1;
  l16:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "UINT64", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_INT64()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "INT64"));  if (!yymatchString("int64")) goto l17;  if (!yy___()) goto l17;
  yyprintf((stderr, "  ok   %s @ %s\n", "INT64", yybuf+yypos));
  return 1;
  l17:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "INT64", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_UINT32()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "UINT32"));  if (!yymatchString("uint32")) goto l18;  if (!yy___()) goto l18;
  yyprintf((stderr, "  ok   %s @ %s\n", "UINT32", yybuf+yypos));
  return 1;
  l18:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "UINT32", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_INT32()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "INT32"));  if (!yymatchString("int32")) goto l19;  if (!yy___()) goto l19;
  yyprintf((stderr, "  ok   %s @ %s\n", "INT32", yybuf+yypos));
  return 1;
  l19:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "INT32", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_UINT16()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "UINT16"));  if (!yymatchString("uint16")) goto l20;  if (!yy___()) goto l20;
  yyprintf((stderr, "  ok   %s @ %s\n", "UINT16", yybuf+yypos));
  return 1;
  l20:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "UINT16", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_INT16()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "INT16"));  if (!yymatchString("int16")) goto l21;  if (!yy___()) goto l21;
  yyprintf((stderr, "  ok   %s @ %s\n", "INT16", yybuf+yypos));
  return 1;
  l21:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "INT16", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_UINT8()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "UINT8"));  if (!yymatchString("uint8")) goto l22;  if (!yy___()) goto l22;
  yyprintf((stderr, "  ok   %s @ %s\n", "UINT8", yybuf+yypos));
  return 1;
  l22:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "UINT8", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_INT8()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "INT8"));  if (!yymatchString("int8")) goto l23;  if (!yy___()) goto l23;
  yyprintf((stderr, "  ok   %s @ %s\n", "INT8", yybuf+yypos));
  return 1;
  l23:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "INT8", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_STRING()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "STRING"));  if (!yymatchString("String")) goto l24;  if (!yy___()) goto l24;
  yyprintf((stderr, "  ok   %s @ %s\n", "STRING", yybuf+yypos));
  return 1;
  l24:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "STRING", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_BOOL()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "BOOL"));  if (!yymatchString("bool")) goto l25;  if (!yy___()) goto l25;
  yyprintf((stderr, "  ok   %s @ %s\n", "BOOL", yybuf+yypos));
  return 1;
  l25:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "BOOL", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_TYPE()
{  int yypos0= yypos, yythunkpos0= yythunkpos;  yyDo(yyPush, 1, 0);
  yyprintf((stderr, "%s\n", "TYPE"));
  {  int yypos27= yypos, yythunkpos27= yythunkpos;  if (!yy_BOOL()) goto l28;  yyDo(yySet, 0, 0);  goto l27;
  l28:;	  yypos= yypos27; yythunkpos= yythunkpos27;  if (!yy_STRING()) goto l29;  yyDo(yySet, 0, 0);  goto l27;
  l29:;	  yypos= yypos27; yythunkpos= yythunkpos27;  if (!yy_INT8()) goto l30;  yyDo(yySet, 0, 0);  goto l27;
  l30:;	  yypos= yypos27; yythunkpos= yythunkpos27;  if (!yy_UINT8()) goto l31;  yyDo(yySet, 0, 0);  goto l27;
  l31:;	  yypos= yypos27; yythunkpos= yythunkpos27;  if (!yy_INT16()) goto l32;  yyDo(yySet, 0, 0);  goto l27;
  l32:;	  yypos= yypos27; yythunkpos= yythunkpos27;  if (!yy_UINT16()) goto l33;  yyDo(yySet, 0, 0);  goto l27;
  l33:;	  yypos= yypos27; yythunkpos= yythunkpos27;  if (!yy_INT32()) goto l34;  yyDo(yySet, 0, 0);  goto l27;
  l34:;	  yypos= yypos27; yythunkpos= yythunkpos27;  if (!yy_UINT32()) goto l35;  yyDo(yySet, 0, 0);  goto l27;
  l35:;	  yypos= yypos27; yythunkpos= yythunkpos27;  if (!yy_INT64()) goto l36;  yyDo(yySet, 0, 0);  goto l27;
  l36:;	  yypos= yypos27; yythunkpos= yythunkpos27;  if (!yy_UINT64()) goto l37;  yyDo(yySet, 0, 0);  goto l27;
  l37:;	  yypos= yypos27; yythunkpos= yythunkpos27;  if (!yy_FLOAT()) goto l38;  yyDo(yySet, 0, 0);  goto l27;
  l38:;	  yypos= yypos27; yythunkpos= yythunkpos27;  if (!yy_DOUBLE()) goto l26;  yyDo(yySet, 0, 0);
  }
  l27:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "TYPE", yybuf+yypos));  yyDo(yyPop, 1, 0);
  return 1;
  l26:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "TYPE", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_COLON()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "COLON"));  if (!yy__()) goto l39;  if (!yymatchChar(':')) goto l39;  yyDo(yy_1_COLON, yybegin, yyend);
  yyprintf((stderr, "  ok   %s @ %s\n", "COLON", yybuf+yypos));
  return 1;
  l39:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "COLON", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_NUMBER()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "NUMBER"));  if (!yy_DIGIT()) goto l40;
  l41:;	
  {  int yypos42= yypos, yythunkpos42= yythunkpos;  if (!yy_DIGIT()) goto l42;  goto l41;
  l42:;	  yypos= yypos42; yythunkpos= yythunkpos42;
  }  yyDo(yy_1_NUMBER, yybegin, yyend);
  yyprintf((stderr, "  ok   %s @ %s\n", "NUMBER", yybuf+yypos));
  return 1;
  l40:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "NUMBER", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy__()
{
  yyprintf((stderr, "%s\n", "_"));
  l44:;	
  {  int yypos45= yypos, yythunkpos45= yythunkpos;
  {  int yypos46= yypos, yythunkpos46= yythunkpos;  if (!yy_SPACE()) goto l47;  goto l46;
  l47:;	  yypos= yypos46; yythunkpos= yythunkpos46;  if (!yy_EOL()) goto l45;
  }
  l46:;	  goto l44;
  l45:;	  yypos= yypos45; yythunkpos= yythunkpos45;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "_", yybuf+yypos));
  return 1;
}
YY_RULE(int) yy_FIELD()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "FIELD"));  if (!yy__()) goto l48;  if (!yy_NUMBER()) goto l48;  if (!yy__()) goto l48;  if (!yy_COLON()) goto l48;  if (!yy__()) goto l48;  if (!yy_TYPE()) goto l48;  if (!yy__()) goto l48;  if (!yy_IDENTIFIER()) goto l48;  yyDo(yy_1_FIELD, yybegin, yyend);
  yyprintf((stderr, "  ok   %s @ %s\n", "FIELD", yybuf+yypos));
  return 1;
  l48:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "FIELD", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_BLOCK_CLOSE()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "BLOCK_CLOSE"));  if (!yy__()) goto l49;  if (!yymatchChar('}')) goto l49;
  yyprintf((stderr, "  ok   %s @ %s\n", "BLOCK_CLOSE", yybuf+yypos));
  return 1;
  l49:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "BLOCK_CLOSE", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_BLOCK_FIELD()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "BLOCK_FIELD"));
  {  int yypos51= yypos, yythunkpos51= yythunkpos;  if (!yy_FIELD()) goto l52;  if (!yy_BLOCK_FIELD()) goto l52;  yyDo(yy_1_BLOCK_FIELD, yybegin, yyend);  goto l51;
  l52:;	  yypos= yypos51; yythunkpos= yythunkpos51;  if (!yy_FIELD()) goto l50;
  }
  l51:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "BLOCK_FIELD", yybuf+yypos));
  return 1;
  l50:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "BLOCK_FIELD", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_BLOCK_OPEN()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "BLOCK_OPEN"));  if (!yy__()) goto l53;  if (!yymatchChar('{')) goto l53;
  yyprintf((stderr, "  ok   %s @ %s\n", "BLOCK_OPEN", yybuf+yypos));
  return 1;
  l53:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "BLOCK_OPEN", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_INHERITANCE()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
